--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,36 +10,33 @@
         android:id="@+id/playerOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Player One"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:text="Player One"
         android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/PlayerOneScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
         android:text="0"
         android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@id/playerOne"
         app:layout_constraintLeft_toLeftOf="@id/playerOne"
-        android:layout_marginLeft="40dp"
-        />
+        app:layout_constraintTop_toBottomOf="@id/playerOne" />
 
     <TextView
         android:id="@+id/playerTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
         android:text="Player Two"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="5dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/playerTwoScore"
@@ -55,21 +52,20 @@
         android:id="@+id/playerStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:gravity="center_horizontal"
         android:textAlignment="center"
 
-        app:layout_constraintTop_toBottomOf="@+id/PlayerOneScore"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:gravity="center_horizontal"
-         />
+        app:layout_constraintTop_toBottomOf="@+id/PlayerOneScore" />
 
     <Button
         android:id="@+id/btn_0"
         android:layout_width="117dp"
         android:layout_height="117dp"
-        android:layout_marginLeft="3dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
         android:backgroundTint="#413F43"
         android:textColor="#FFFFFF"
         android:textSize="60sp"
@@ -85,22 +81,24 @@
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/btn_0"
         app:layout_constraintLeft_toRightOf="@id/btn_0"
-        />
+        app:layout_constraintTop_toTopOf="@id/btn_0" />
 
     <Button
         android:id="@+id/btn_2"
         android:layout_width="118dp"
         android:layout_height="117dp"
+        android:layout_marginEnd="30dp"
+
+        android:layout_marginRight="30dp"
         android:backgroundTint="#413F43"
         android:textColor="#FFFFFF"
+
         android:textSize="60sp"
         android:textStyle="bold"
-
-        app:layout_constraintTop_toTopOf="@id/btn_1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/btn_1"
-        />
+        app:layout_constraintTop_toTopOf="@id/btn_1" />
 
     <Button
         android:id="@+id/btn_3"
@@ -110,9 +108,9 @@
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/btn_0"
         app:layout_constraintLeft_toLeftOf="@id/btn_0"
-        />
+        app:layout_constraintTop_toBottomOf="@id/btn_0" />
+
     <Button
         android:id="@+id/btn_4"
         android:layout_width="117dp"
@@ -121,9 +119,8 @@
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/btn_3"
         app:layout_constraintLeft_toRightOf="@id/btn_3"
-        />
+        app:layout_constraintTop_toTopOf="@id/btn_3" />
 
     <Button
         android:id="@+id/btn_5"
@@ -133,9 +130,8 @@
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/btn_4"
         app:layout_constraintLeft_toRightOf="@id/btn_4"
-        />
+        app:layout_constraintTop_toTopOf="@id/btn_4" />
 
     <Button
         android:id="@+id/btn_6"
@@ -145,9 +141,8 @@
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/btn_3"
         app:layout_constraintLeft_toLeftOf="@id/btn_3"
-        />
+        app:layout_constraintTop_toBottomOf="@id/btn_3" />
 
     <Button
         android:id="@+id/btn_7"
@@ -157,9 +152,8 @@
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/btn_6"
         app:layout_constraintLeft_toRightOf="@id/btn_6"
-        />
+        app:layout_constraintTop_toTopOf="@id/btn_6" />
 
     <Button
         android:id="@+id/btn_8"
@@ -169,17 +163,19 @@
         android:textColor="#FFFFFF"
         android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="@id/btn_7"
         app:layout_constraintLeft_toRightOf="@id/btn_7"
-        />
+        app:layout_constraintTop_toTopOf="@id/btn_7" />
 
     <Button
         android:id="@+id/resetGame"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginLeft="2dp"
         android:layout_marginTop="8dp"
+        android:layout_marginRight="2dp"
         android:backgroundTint="#E1470D"
         android:text="Reset Game"
+
         android:textColor="#ffffff"
         android:textSize="20sp"
         android:textStyle="bold"
